--- a/package.json
+++ b/package.json
@@ -62,5 +62,11 @@
       "prettier --trailing-comma es5 --single-quote --write",
       "git add"
     ]
+  },
+  "dependencies": {
+    "@mdx-js/mdx": "^1.5.0",
+    "@mdx-js/react": "^1.5.0",
+    "gatsby-plugin-mdx": "^1.0.46",
+    "gatsby-theme-mdx-deck": "^3.0.13"
   }
 }
